apps/places-scraper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: places-scraper
  namespace: lonctus
  labels:
    app: places-scraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: places-scraper
  template:
    metadata:
      labels:
        app: places-scraper
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9901"
        prometheus.io/path: "/stats/prometheus"
    spec:
      containers:
        # Envoy Sidecar (Exposed)
        - name: envoy
          image: envoyproxy/envoy:v1.29-latest
          ports:
            - name: http
              containerPort: 8000 # Exposed port
              protocol: TCP
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
        - name: places-scraper
          image: kaljo14/places-scraper:latest@sha256:6841f48bc359249166c1192edf01536c3bd0b9d83c6e0636d83be003e8cbaf02
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi

      volumes:
        - name: envoy-config
          configMap:
            name: scraper-envoy-config
            items:
              - key: envoy.yaml
                path: envoy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: places-scraper
  namespace: lonctus
  labels:
    app: places-scraper
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000 # Points to Envoy
      protocol: TCP
      name: http
  selector:
    app: places-scraper
