apps/places-scraper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scraper-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: places-scraper.lonctus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: places-scraper
            port:
              number: 80
